feat:make a website

--- a/index.html
+++ b/index.html
@@ -27,11 +27,58 @@
                 <img src = "./images/Vector.svg" alt = "up" ></button>
         </section>
         <section class="elements">
-
+          <div class="element">
+            <img class="element__img" alt="Карачаевск" src="./images/karachaevsk.jpg">
+              <div class="element__group">
+                <p class="element__text">Карачаевск</p>
+                <button type ="button" name = "button3" class="element__button">
+                    <img src = "./images/element__button.svg" alt = "up" ></button> 
+              </div>
+          </div>
+          <div class="element">
+            <img class="element__img" alt="Гора Эльбрус" src="./images/elbrus.jpg">
+              <div class="element__group">
+                <p class="element__text">Гора Эльбрус</p>
+                <button type ="button" name = "button3" class="element__button">
+                    <img src = "./images/element__button.svg" alt = "up" ></button> 
+              </div>
+          </div>
+          <div class="element">
+            <img class="element__img" alt="Домбай" src="./images/dombai.jpg">
+              <div class="element__group">
+                <p class="element__text">Домбай</p>
+                <button type ="button" name = "button3" class="element__button">
+                    <img src = "./images/element__button.svg" alt = "up" ></button> 
+              </div>
+          </div>
+          <div class="element">
+            <img class="element__img" alt="Гора Эльбрус" src="./images/elbrus.jpg">
+              <div class="element__group">
+                <p class="element__text">Гора Эльбрус</p>
+                <button type ="button" name = "button3" class="element__button">
+                    <img src = "./images/element__button.svg" alt = "up" ></button> 
+              </div>
+          </div>
+          <div class="element">
+            <img class="element__img" alt="Домбай" src="./images/dombai.jpg">
+              <div class="element__group">
+                <p class="element__text">Домбай</p>
+                <button type ="button" name = "button3" class="element__button">
+                    <img src = "./images/element__button.svg" alt = "up" ></button> 
+              </div>
+          </div>
+          <div class="element">
+            <img class="element__img" alt="Карачаевск" src="./images/karachaevsk.jpg">
+              <div class="element__group">
+                <p class="element__text">Карачаево-Ч...</p>
+                <button type ="button" name = "button3" class="element__button">
+                    <img src = "./images/element__button.svg" alt = "up" ></button> 
+              </div>
+          </div>
         </section>
       </main>
       <footer class="footer">
-
+        <p class="footer__copyright">© 2020 Mesto Russia</p>
       </footer>
     </div>
 
