feat: create adaptive

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </section>
         <section class="elements">
           <div class="element">
-            <img class="element__img" alt="Карачаевск" src="./images/karachaevsk.jpg">
+            <img class="element__img" alt="Карачаевск" src="./images/karchaevsk.jpg">
               <div class="element__group">
                 <p class="element__text">Карачаевск</p>
                 <button type ="button" name = "button3" class="element__button">
@@ -68,7 +68,7 @@
               </div>
           </div>
           <div class="element">
-            <img class="element__img" alt="Карачаевск" src="./images/karachaevsk.jpg">
+            <img class="element__img" alt="Карачаевск" src="./images/karchaevsk.jpg">
               <div class="element__group">
                 <p class="element__text">Карачаево-Ч...</p>
                 <button type ="button" name = "button3" class="element__button">
