--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
             </div>
             <button type ="button" name = "button2" class="portfile__button-big">
                 <img src = "./images/Vector.svg" alt = "up" ></button>
+              <div class="popup">
+                <form class="popup__container"></form>
+              </div>
         </section>
         <section class="elements">
           <div class="element">
