subject:make a shape adaptive

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
                     <h2 class="popup__heading">Редактировать профиль</h2>
                     <fieldset class="popup__input-container popup__input-container_ctrl_texts">
                       <label for="heading"></label>
-                      <input type="text" id="heading" value="Жак-Ив Кусто" class="popup__item"></fieldset>
+                      <input type="text" id="heading" name="firstname" value="Жак-Ив Кусто" class="popup__item"></fieldset>
                     <fieldset class="popup__input-container popup__input-container_ctrl_texts">
                     <label for="subheading"></label>
-                    <input type="text" value="Исследователь океана" id="subheading" class="popup__item"></fieldset>
+                    <input type="text" name="lastname" value="Исследователь океана" id="subheading" class="popup__item"></fieldset>
                   </div>
                   <fieldset class="popup__handlers">
                     <input type="submit" value="Сохранить" class="popup__button">
@@ -88,7 +88,7 @@
           <div class="element">
             <img class="element__img" alt="Карачаевск" src="./images/karchaevsk.jpg">
               <div class="element__group">
-                <p class="element__text">Карачаево-Черкессия</p>
+                <p class="element__text">Карачаевск</p>
                 <button type ="button" name = "button3" class="element__button">
                     <img src = "./images/element__button.svg" alt = "up" ></button> 
               </div>
