--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
       <footer class="footer">
         <p class="footer__copyright">© 2020 Mesto Russia</p>
       </footer>
+      <script src="JavaScript/javaScript.js"></script>
     </div>
 
      
