--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       </footer>
       <form class="popup__container">
         <button type ="button" name = "button2" class="popup__close-icon">
-          <img src = "./images/close_Icon.svg" alt = "up" ></button>
+          <img src = "./images/Close_Icon.svg" alt = "up" ></button>
         <div class="popup__main-container">
           <h2 class="popup__heading">Редактировать профиль</h2>
           <fieldset class="popup__input-container popup__input-container_ctrl_texts">
