--- a/index.html
+++ b/index.html
@@ -102,11 +102,9 @@
         <div class="popup__main-container">
           <h2 class="popup__heading">Редактировать профиль</h2>
           <fieldset class="popup__input-container popup__input-container_ctrl_texts">
-            <label for="heading"></label>
-            <input type="text" id="heading" name="firstname" value="Жак-Ив Кусто" class="popup__item"></fieldset>
+            <input type="text"  name="firstname" value="Жак-Ив Кусто" class="popup__item"></fieldset>
           <fieldset class="popup__input-container popup__input-container_ctrl_texts">
-          <label for="subheading"></label>
-          <input type="text" name="lastname" value="Исследователь океана" id="subheading" class="popup__item"></fieldset>
+          <input type="text" name="lastname" value="Исследователь океана"  class="popup__item"></fieldset>
         </div>
         <fieldset class="popup__handlers">
           <input type="submit" value="Сохранить" class="popup__button">
