Fix:index.html pages div closed

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         </fieldset>
       </form>
     </div>
-
+  </div>
     <script src="JavaScript/javaScript.js"></script> 
  </body>
  </html>
