fix:block indexHTML

--- a/index.html
+++ b/index.html
@@ -1,100 +1,101 @@
- <!DOCTYPE html>
- <html lang="ru">
- <head>
-     <meta charset="UTF-8">
-     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <link rel="stylesheet" href="./pages/index.css">
-     <title>Mesto</title>
- </head>
- <body>
-   <div class="page">
-      <header class="header">
-        <img class="header__logo" alt="логотип сайта" src="./images/header__logo.svg">
-        <div class="header__line"></div>
-      </header>
-      <main>
-        <section class="portfile">
-            <img class="portfile__avatar" alt="жак-ив кусто" src="./images/Avatar_jak.jpg">
-            <div class="portfile__info">
-                <h1 class="portfile__title">Жак-Ив Кусто</h1>
-                <p class="portfile__subtitle">Исследователь океана</p>
-                <button type ="button" name = "button1" class="portfile__button">
-                    <img src = "./images/vector_button-mini.svg" alt = "up" ></button> 
-            </div>
-            <button type ="button" name = "button2" class="portfile__button-big">
-                <img src = "./images/Vector.svg" alt = "up" ></button>
-        </section>
-        <section class="elements">
-          <div class="element">
-            <img class="element__img" alt="Карачаевск" src="./images/karchaevsk.jpg">
-              <div class="element__group">
-                <p class="element__text">Карачаевск</p>
-                <button type ="button" name = "button3" class="element__button">
-                    <img src = "./images/element__button.svg" alt = "up" ></button> 
-              </div>
+<!DOCTYPE html>
+<html lang="ru">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./pages/index.css">
+  <title>Mesto</title>
+</head>
+
+<body>
+  <div class="page">
+    <header class="header">
+      <img class="header__logo" alt="логотип сайта" src="./images/header__logo.svg">
+
+    </header>
+    <main>
+      <section class="portfile">
+        <img class="portfile__avatar" alt="автор" src="./images/Avatar_jak.jpg">
+        <div class="portfile__info">
+          <h1 class="portfile__title">Жак-Ив Кусто</h1>
+          <p class="portfile__subtitle">Исследователь океана</p>
+          <button type="button" aria-label="open" name="button1" class="portfile__button">
+            <div class="portfile__button_image"></div>
+          </button>
+        </div>
+        <button type="button" name="button2" class="portfile__button-big">
+          <img src="./images/Vector.svg" alt="кнопка"></button>
+      </section>
+      <section class="elements">
+        <article class="element">
+          <img class="element__img" alt="Карачаевск" src="./images/karchaevsk.jpg">
+          <div class="element__group">
+            <h3 class="element__text">Карачаевск</h3>
+            <button type="button" name="button3" class="element__button">
+              <img src="./images/element__button.svg" alt="кнопка"></button>
           </div>
-          <div class="element">
-            <img class="element__img" alt="Гора Эльбрус" src="./images/elbrus.jpg">
-              <div class="element__group">
-                <p class="element__text">Гора Эльбрус</p>
-                <button type ="button" name = "button3" class="element__button">
-                    <img src = "./images/element__button.svg" alt = "up" ></button> 
-              </div>
+        </article>
+        <article class="element">
+          <img class="element__img" alt="Гора Эльбрус" src="./images/elbrus.jpg">
+          <div class="element__group">
+            <h3 class="element__text">Гора Эльбрус</h3>
+            <button type="button" name="button3" class="element__button">
+              <img src="./images/element__button.svg" alt="кнопка"></button>
           </div>
-          <div class="element">
-            <img class="element__img" alt="Домбай" src="./images/dombai.jpg">
-              <div class="element__group">
-                <p class="element__text">Домбай</p>
-                <button type ="button" name = "button3" class="element__button">
-                    <img src = "./images/element__button.svg" alt = "up" ></button> 
-              </div>
+        </article>
+        <article class="element">
+          <img class="element__img" alt="Домбай" src="./images/dombai.jpg">
+          <div class="element__group">
+            <h3 class="element__text">Домбай</h3>
+            <button type="button" name="button3" class="element__button">
+              <img src="./images/element__button.svg" alt="кнопка"></button>
           </div>
-          <div class="element">
-            <img class="element__img" alt="Гора Эльбрус" src="./images/elbrus.jpg">
-              <div class="element__group">
-                <p class="element__text">Гора Эльбрус</p>
-                <button type ="button" name = "button3" class="element__button">
-                    <img src = "./images/element__button.svg" alt = "up" ></button> 
-              </div>
+        </article>
+        <article class="element">
+          <img class="element__img" alt="Гора Эльбрус" src="./images/elbrus.jpg">
+          <div class="element__group">
+            <h3 class="element__text">Гора Эльбрус</h3>
+            <button type="button" name="button3" class="element__button">
+              <img src="./images/element__button.svg" alt="кнопка"></button>
           </div>
-          <div class="element">
-            <img class="element__img" alt="Домбай" src="./images/dombai.jpg">
-              <div class="element__group">
-                <p class="element__text">Домбай</p>
-                <button type ="button" name = "button3" class="element__button">
-                    <img src = "./images/element__button.svg" alt = "up" ></button> 
-              </div>
+        </article>
+        <article class="element">
+          <img class="element__img" alt="Домбай" src="./images/dombai.jpg">
+          <div class="element__group">
+            <h3 class="element__text">Домбай</h3>
+            <button type="button" name="button3" class="element__button">
+              <img src="./images/element__button.svg" alt="кнопка"></button>
           </div>
-          <div class="element">
-            <img class="element__img" alt="Карачаевск" src="./images/karchaevsk.jpg">
-              <div class="element__group">
-                <p class="element__text">Карачаевск</p>
-                <button type ="button" name = "button3" class="element__button">
-                    <img src = "./images/element__button.svg" alt = "up" ></button> 
-              </div>
+        </article>
+        <article class="element">
+          <img class="element__img" alt="Карачаевск" src="./images/karchaevsk.jpg">
+          <div class="element__group">
+            <h3 class="element__text">Карачаевск</h3>
+            <button type="button" name="button3" class="element__button">
+              <img src="./images/element__button.svg" alt="кнопка"></button>
           </div>
-        </section>
-      </main>
-      <footer class="footer">
-        <p class="footer__copyright">© 2020 Mesto Russia</p>
-      </footer>
-      <div class="popup">       
-      <form class="popup__container">
-        <button type ="button" name = "button2" class="popup__close-icon">
-          <img src = "./images/close_Icon.svg" alt = "up" ></button>
+        </article>
+      </section>
+    </main>
+    <footer class="footer">
+      <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
+    </footer>
+    <section class="popup">
+      <form class="popup__container" name ="Form" method="post" action="mailto:vlad.rastik@yandex.ru">
+        <button type="button" name="button2" class="popup__close-icon">
+          <img src="./images/close_Icon.svg" alt="up"></button>
         <div class="popup__main-container">
           <h2 class="popup__heading">Редактировать профиль</h2>
-          <fieldset class="popup__input-container popup__input-container_ctrl_texts">
-            <input type="text"  name="firstname" value="Жак-Ив Кусто" class="popup__item"></fieldset>
-          <fieldset class="popup__input-container popup__input-container_ctrl_texts">
-          <input type="text" name="lastname" value="Исследователь океана"  class="popup__item"></fieldset>
+            <input type="text" name="firstname" value="Жак-Ив Кусто" class="popup__item popup__item_script"></fieldset>
+            <input type="text" name="lastname" value="Исследователь океана" class="popup__item popup__item_script"></fieldset>
         </div>
-        <fieldset class="popup__handlers">
-          <input type="submit" value="Сохранить" class="popup__button">
+          <button type="button" name="button4" form="Form" class="popup__button">Сохранить</button>
         </fieldset>
       </form>
-    </div>
+    </section>
   </div>
-    <script src="JavaScript/javaScript.js"></script> 
- </body>
- </html>
+  <script src="JavaScript/javaScript.js"></script>
+</body>
+
+</html>
