--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <section class="popup">
       <form class="popup__container" name ="Form" method="post" action="mailto:vlad.rastik@yandex.ru">
         <button type="button" name="button2" class="popup__close-icon">
-          <img src="./images/close_Icon.svg" alt="up"></button>
+          <img src="./images/Close_Icon.svg" alt="выход"></button>
         <div class="popup__main-container">
           <h2 class="popup__heading">Редактировать профиль</h2>
             <input type="text" name="firstname" value="Жак-Ив Кусто" class="popup__item popup__item_script"></fieldset>
