--- a/index.html
+++ b/index.html
@@ -87,10 +87,10 @@
           <img src="./images/Close_Icon.svg" alt="выход"></button>
         <div class="popup__main-container">
           <h2 class="popup__heading">Редактировать профиль</h2>
-            <input type="text" name="firstname" value="Жак-Ив Кусто" class="popup__item popup__item_script"></fieldset>
-            <input type="text" name="lastname" value="Исследователь океана" class="popup__item popup__item_script"></fieldset>
+            <input type="text" name="firstname" value="Жак-Ив Кусто" class="popup__item popup__item_top"></fieldset>
+            <input type="text" name="lastname" value="Исследователь океана" class="popup__item popup__item_bottom"></fieldset>
         </div>
-          <button type="button" name="button4" form="Form" class="popup__button">Сохранить</button>
+          <button type="submit" name="button4" form="Form" class="popup__button">Сохранить</button>
         </fieldset>
       </form>
     </section>
