--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </header>
     <main>
       <section class="portfile">
-        <img class="portfile__avatar" alt="автор" src="./images/Avatar_jak.jpg">
+        <img class="portfile__avatar" alt="автор" src="./images/avatar_jak.jpg">
         <div class="portfile__info">
           <h1 class="portfile__title">Жак-Ив Кусто</h1>
           <p class="portfile__subtitle">Исследователь океана</p>
@@ -25,7 +25,7 @@
           </button>
         </div>
         <button type="button" name="button2" class="portfile__button-big">
-          <img src="./images/Vector.svg" alt="кнопка"></button>
+          <img src="./images/vector.svg" class="portfile__button-big_image" alt="кнопка"></button>
       </section>
       <section class="elements">
         <article class="element">
@@ -84,7 +84,7 @@
     <section class="popup">
       <form class="popup__container" name ="Form" method="post" action="mailto:vlad.rastik@yandex.ru">
         <button type="button" name="button2" class="popup__close-icon">
-          <img src="./images/Close_Icon.svg" alt="выход"></button>
+          <img src="./images/close_icon.svg" alt="выход"></button>
         <div class="popup__main-container">
           <h2 class="popup__heading">Редактировать профиль</h2>
             <input type="text" name="firstname" value="Жак-Ив Кусто" class="popup__item popup__item_top"></fieldset>
