fix:vadulatin fixs

--- a/index.html
+++ b/index.html
@@ -87,11 +87,11 @@
           <img src="./images/close_icon.svg" alt="выход"></button>
         <div class="popup__main-container">
           <h2 class="popup__heading">Редактировать профиль</h2>
-            <input type="text" name="firstname" value="Жак-Ив Кусто" class="popup__item popup__item_top"></fieldset>
-            <input type="text" name="lastname" value="Исследователь океана" class="popup__item popup__item_bottom"></fieldset>
+            <input type="text" name="firstname" value="Жак-Ив Кусто" class="popup__item popup__item_top">
+            <input type="text" name="lastname" value="Исследователь океана" class="popup__item popup__item_bottom">
         </div>
           <button type="submit" name="button4" form="Form" class="popup__button">Сохранить</button>
-        </fieldset>
+        
       </form>
     </section>
   </div>
