fix:bem vadulation

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
           <h1 class="portfile__title">Жак-Ив Кусто</h1>
           <p class="portfile__subtitle">Исследователь океана</p>
           <button type="button" aria-label="open" name="button1" class="portfile__button">
-            <div class="portfile__button_image"></div>
+            <div class="portfile__image"></div>
           </button>
         </div>
         <button type="button" name="button2" class="portfile__button-big">
-          <img src="./images/vector.svg" class="portfile__button-big_image" alt="кнопка"></button>
+          <img src="./images/vector.svg" class="portfile__image-button" alt="кнопка"></button>
       </section>
       <section class="elements">
         <article class="element">
