--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
         <div class="portfile__info">
           <h1 class="portfile__title">Жак-Ив Кусто</h1>
           <p class="portfile__subtitle">Исследователь океана</p>
-          <button type="button" aria-label="open" name="button1" class="portfile__button">
-            <div class="portfile__image"></div>
+          <button type="button" aria-label="open" name="button1" class="portfile__button portfile__image">
           </button>
         </div>
         <button type="button" name="button2" class="portfile__button-big">
@@ -33,47 +32,42 @@
           <div class="element__group">
             <h3 class="element__text">Карачаевск</h3>
             <button type="button" name="button3" class="element__button">
-              <img src="./images/element__button.svg" alt="кнопка"></button>
+            </button>
           </div>
         </article>
         <article class="element">
           <img class="element__img" alt="Гора Эльбрус" src="./images/elbrus.jpg">
           <div class="element__group">
             <h3 class="element__text">Гора Эльбрус</h3>
-            <button type="button" name="button3" class="element__button">
-              <img src="./images/element__button.svg" alt="кнопка"></button>
+            <button type="button" name="button3" class="element__button"></button>
           </div>
         </article>
         <article class="element">
           <img class="element__img" alt="Домбай" src="./images/dombai.jpg">
           <div class="element__group">
             <h3 class="element__text">Домбай</h3>
-            <button type="button" name="button3" class="element__button">
-              <img src="./images/element__button.svg" alt="кнопка"></button>
+            <button type="button" name="button3" class="element__button"></button>
           </div>
         </article>
         <article class="element">
           <img class="element__img" alt="Гора Эльбрус" src="./images/elbrus.jpg">
           <div class="element__group">
             <h3 class="element__text">Гора Эльбрус</h3>
-            <button type="button" name="button3" class="element__button">
-              <img src="./images/element__button.svg" alt="кнопка"></button>
+            <button type="button" name="button3" class="element__button"></button>
           </div>
         </article>
         <article class="element">
           <img class="element__img" alt="Домбай" src="./images/dombai.jpg">
           <div class="element__group">
             <h3 class="element__text">Домбай</h3>
-            <button type="button" name="button3" class="element__button">
-              <img src="./images/element__button.svg" alt="кнопка"></button>
+            <button type="button" name="button3" class="element__button"></button>
           </div>
         </article>
         <article class="element">
           <img class="element__img" alt="Карачаевск" src="./images/karchaevsk.jpg">
           <div class="element__group">
             <h3 class="element__text">Карачаевск</h3>
-            <button type="button" name="button3" class="element__button">
-              <img src="./images/element__button.svg" alt="кнопка"></button>
+            <button type="button" name="button3" class="element__button"></button>
           </div>
         </article>
       </section>
@@ -87,10 +81,10 @@
           <img src="./images/close_icon.svg" alt="выход"></button>
         <div class="popup__main-container">
           <h2 class="popup__heading">Редактировать профиль</h2>
-            <input type="text" name="firstname" value="Жак-Ив Кусто" class="popup__item popup__item_top">
-            <input type="text" name="lastname" value="Исследователь океана" class="popup__item popup__item_bottom">
+            <input type="text" name="firstname" value="Жак-Ив Кусто" class="popup__item popup__item_position_top">
+            <input type="text" name="lastname" value="Исследователь океана" class="popup__item popup__item_position_bottom">
         </div>
-          <button type="submit" name="button4" form="Form" class="popup__button">Сохранить</button>
+          <button type="submit" name="button4" class="popup__button">Сохранить</button>
         
       </form>
     </section>
