--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./pages/index.css">
-  <link rel="shortcut icon" href="./images/avatar_jak" type="image/png">
+  <link rel="shortcut icon" href="./images/favicon.png" type="image/png">
   <title>Mesto</title>
 </head>
 
