--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./style.css">
   <link rel="stylesheet" href="./pages/index.css">
   <link rel="shortcut icon" href="./images/favicon.png" type="image/png">
+
   <title>Mesto</title>
 </head>
 
@@ -29,6 +31,8 @@
       </section>
       <section class="elements">
         <article class="element">
+          <button type="button" name="button7" class="element__trash">
+          </button>
           <img class="element__img" alt="Карачаевск" src="./images/karchaevsk.jpg">
           <div class="element__group">
             <h3 class="element__text">Карачаевск</h3>
@@ -37,6 +41,8 @@
           </div>
         </article>
         <article class="element">
+          <button type="button" name="button7" class="element__trash">
+          </button>
           <img class="element__img" alt="Гора Эльбрус" src="./images/elbrus.jpg">
           <div class="element__group">
             <h3 class="element__text">Гора Эльбрус</h3>
@@ -44,6 +50,8 @@
           </div>
         </article>
         <article class="element">
+          <button type="button" name="button7" class="element__trash">
+          </button>
           <img class="element__img" alt="Домбай" src="./images/dombai.jpg">
           <div class="element__group">
             <h3 class="element__text">Домбай</h3>
@@ -51,6 +59,8 @@
           </div>
         </article>
         <article class="element">
+          <button type="button" name="button7" class="element__trash">
+          </button>
           <img class="element__img" alt="Гора Эльбрус" src="./images/elbrus.jpg">
           <div class="element__group">
             <h3 class="element__text">Гора Эльбрус</h3>
@@ -58,6 +68,8 @@
           </div>
         </article>
         <article class="element">
+          <button type="button" name="button7" class="element__trash">
+          </button>
           <img class="element__img" alt="Домбай" src="./images/dombai.jpg">
           <div class="element__group">
             <h3 class="element__text">Домбай</h3>
@@ -65,6 +77,8 @@
           </div>
         </article>
         <article class="element">
+          <button type="button" name="button7" class="element__trash">
+          </button>
           <img class="element__img" alt="Карачаевск" src="./images/karchaevsk.jpg">
           <div class="element__group">
             <h3 class="element__text">Карачаевск</h3>
@@ -86,9 +100,22 @@
             <input type="text" name="lastname" value="Исследователь океана" class="popup__item popup__item_position_bottom">
         </div>
           <button type="submit" name="button4" class="popup__button">Сохранить</button>
-        
       </form>
     </section>
+
+    <section class="popup-add">
+      <form class="popup-add__container" name ="Form" method="post" action="mailto:vlad.rastik@yandex.ru">
+        <button type="button" name="button5" class="popup__close-icon popup__close-icon_second">
+          <img src="./images/close_icon.svg" alt="выход"></button>
+        <div class="popup__main-container">
+          <h2 class="popup__heading">Новое место</h2>
+            <input type="text" name="firstname" value="Название" class="popup__item popup-add__item_position_top">
+            <input type="text" name="lastname" value="Ссылка на картинку" class="popup__item popup-add__item_position_bottom">
+        </div>
+          <button type="submit" name="button6" class="popup__button">создать</button>
+      </form>
+    </section>
+
   </div>
   <script src="JavaScript/javaScript.js"></script>
 </body>
