--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
           <img src="./images/close_icon.svg" alt="выход"></button>
         <div class="popup__main-container">
           <h2 class="popup__heading">Новое место</h2>
-            <input type="text" name="firstname" value="Название" class="popup__item popup-add__item_position_top">
-            <input type="text" name="lastname" value="Ссылка на картинку" class="popup__item popup-add__item_position_bottom">
+            <input type="text" name="firstname" placeholder="Название" value="" class="popup__item popup-add__item_position_top">
+            <input type="text" name="lastname" placeholder="Ссылка на картинку" value="" class="popup__item popup-add__item_position_bottom">
         </div>
           <button type="button" name="button6" class="popup__button popup__button-add-image">создать</button>
       </form>
