Feat: image popup

--- a/index.html
+++ b/index.html
@@ -61,6 +61,17 @@
     </section>
 
 
+    <div class ="image">
+        <div class = "image__container">
+      <button type="button" name="button8" class="image__close">
+        <img src="./images/close_icon.svg" class='image__close-width' alt="выход">
+      </button>
+      <img src='images/karchaevsk.jpg' class='image__opened'
+      ><p class="image__text">Горный Алтай</p>
+    </div>
+  </div>
+
+
     <template class='template'>
     <li class="element">
       <button type="button" name="button7" class="element__trash">
