feat:popup full image

--- a/index.html
+++ b/index.html
@@ -61,15 +61,6 @@
     </section>
 
 
-    <div class ="image">
-        <div class = "image__container">
-      <button type="button" name="button8" class="image__close">
-        <img src="./images/close_icon.svg" class='image__close-width' alt="выход">
-      </button>
-      <img src='images/karchaevsk.jpg' class='image__opened'
-      ><p class="image__text">Горный Алтай</p>
-    </div>
-  </div>
 
 
     <template class='template'>
@@ -83,6 +74,16 @@
       </div>
     </li>
   </template>
+
+  <div class ="image">
+    <div class = "image__container">
+  <button type="button" name="button8" class="image__close">
+    <img src="./images/close_icon.svg" class='image__close-width' alt="выход">
+  </button>
+  <img src='' class='image__opened'
+  ><p class="image__text"></p>
+</div>
+</div>
 
   </div>
   <script src="JavaScript/javaScript.js"></script>
