--- a/index.html
+++ b/index.html
@@ -35,55 +35,55 @@
       <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
     </footer>
     <section class="popup">
-      <form class="popup__container" name ="Form" method="post" action="mailto:vlad.rastik@yandex.ru">
+      <form class="popup__container" name="Form" method="post" action="mailto:vlad.rastik@yandex.ru">
         <button type="button" name="button2" class="popup__close-icon">
           <img src="./images/close_icon.svg" alt="выход"></button>
         <div class="popup__main-container">
           <h2 class="popup__heading">Редактировать профиль</h2>
-            <input type="text" name="firstname" value="Жак-Ив Кусто" class="popup__item popup__item_position_top">
-            <input type="text" name="lastname" value="Исследователь океана" class="popup__item popup__item_position_bottom">
+          <input type="text" name="firstname" value="Жак-Ив Кусто" class="popup__item popup__item_position_top">
+          <input type="text" name="lastname" value="Исследователь океана"
+            class="popup__item popup__item_position_bottom">
         </div>
-          <button type="submit" name="button4" class="popup__button">Сохранить</button>
+        <button type="submit" name="button4" class="popup__button">Сохранить</button>
       </form>
     </section>
 
     <section class="popup-add">
-      <form class="popup-add__container" name ="Form" method="post" action="mailto:vlad.rastik@yandex.ru">
+      <form class="popup-add__container" name="Form" method="post" action="mailto:vlad.rastik@yandex.ru">
         <button type="button" name="button5" class="popup__close-icon popup__close-icon_second">
           <img src="./images/close_icon.svg" alt="выход"></button>
         <div class="popup__main-container">
           <h2 class="popup__heading">Новое место</h2>
-            <input type="text" name="firstname" placeholder="Название" value="" class="popup__item popup-add__item_position_top">
-            <input type="text" name="lastname" placeholder="Ссылка на картинку" value="" class="popup__item popup-add__item_position_bottom">
+          <input type="text" name="firstname" placeholder="Название" value=""
+            class="popup__item popup-add__item_position_top">
+          <input type="text" name="lastname" placeholder="Ссылка на картинку" value=""
+            class="popup__item popup-add__item_position_bottom">
         </div>
-          <button type="button" name="button6" class="popup__button popup__button-add-image">создать</button>
+        <button type="button" name="button6" class="popup__button popup__button-add-image">создать</button>
       </form>
     </section>
 
-
-
-
     <template class='template'>
-    <li class="element">
-      <button type="button" name="button7" class="element__trash ">
-      </button> 
-      <img class="element__img" alt="" src="">
-      <div class="element__group">
-        <h3 class="element__text"></h3>
-        <button type="button" name="button3" class="element__button"></button>
-      </div>
-    </li>
-  </template>
+      <li class="element">
+        <button type="button" name="button7" class="element__trash ">
+        </button>
+        <img class="element__img" alt="" src="//.jpg">
+        <div class="element__group">
+          <h3 class="element__text"></h3>
+          <button type="button" name="button3" class="element__button"></button>
+        </div>
+      </li>
+    </template>
 
-  <div class ="image">
-    <div class = "image__container">
-  <button type="button" name="button8" class="image__close">
-    <img src="./images/close_icon.svg" class='image__close-width' alt="выход">
-  </button>
-  <img src='' class='image__opened'
-  ><p class="image__text"></p>
-</div>
-</div>
+    <div class="image">
+      <div class="image__container">
+        <button type="button" name="button8" class="image__close">
+          <img src="./images/close_icon.svg" class='image__close-width' alt="выход">
+        </button>
+        <img src='//.jpg' class='image__opened'>
+        <p class="image__text"></p>
+      </div>
+    </div>
 
   </div>
   <script src="JavaScript/javaScript.js"></script>
