--- a/index.html
+++ b/index.html
@@ -50,16 +50,16 @@
 
     <section class="popup-add">
       <form class="popup-add__container" name="Form" method="post" action="mailto:vlad.rastik@yandex.ru">
-        <button type="button" name="button5" class="popup__close-icon popup__close-icon_second">
+        <button type="button" name="button5" class="popup-add__close-icon popup__close-icon_second">
           <img src="./images/close_icon.svg" alt="выход"></button>
-        <div class="popup__main-container">
-          <h2 class="popup__heading">Новое место</h2>
+        <div class="popup-add__main-container">
+          <h2 class="popup-add__heading">Новое место</h2>
           <input type="text" name="firstname" placeholder="Название" value=""
-            class="popup__item popup-add__item_position_top">
+            class="popup-add__item popup-add__item_position_top">
           <input type="text" name="lastname" placeholder="Ссылка на картинку" value=""
-            class="popup__item popup-add__item_position_bottom">
+            class="popup-add__item popup-add__item_position_bottom">
         </div>
-        <button type="button" name="button6" class="popup__button popup__button-add-image">создать</button>
+        <button type="button" name="button6" class="popup-add__button popup__button-add-image">создать</button>
       </form>
     </section>
 
@@ -67,7 +67,7 @@
       <li class="element">
         <button type="button" name="button7" class="element__trash ">
         </button>
-        <img class="element__img" alt="" src="//.jpg">
+        <img class="element__img" alt="изображение" src="//.jpg">
         <div class="element__group">
           <h3 class="element__text"></h3>
           <button type="button" name="button3" class="element__button"></button>
@@ -80,7 +80,7 @@
         <button type="button" name="button8" class="image__close">
           <img src="./images/close_icon.svg" class='image__close-width' alt="выход">
         </button>
-        <img src='//.jpg' class='image__opened'>
+        <img src='//.jpg' alt="изображение" class='image__opened'>
         <p class="image__text"></p>
       </div>
     </div>
