--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
     <section class="popup-add">
       <form class="popup-add__container" name="Form" method="post" action="mailto:vlad.rastik@yandex.ru">
-        <button type="button" name="button5" class="popup-add__close-icon popup__close-icon_second">
+        <button type="button" name="button5" class="popup-add__close-icon popup-add__close-icon_second">
           <img src="./images/close_icon.svg" alt="выход"></button>
         <div class="popup-add__main-container">
           <h2 class="popup-add__heading">Новое место</h2>
@@ -59,7 +59,7 @@
           <input type="text" name="lastname" placeholder="Ссылка на картинку" value=""
             class="popup-add__item popup-add__item_position_bottom">
         </div>
-        <button type="button" name="button6" class="popup-add__button popup__button-add-image">создать</button>
+        <button type="button" name="button6" class="popup-add__button popup-add__button-add-image">создать</button>
       </form>
     </section>
 
