Fix:images src name

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <li class="element">
         <button type="button" name="button7" class="element__trash ">
         </button>
-        <img class="element__img" alt="изображение" src="//.jpg">
+        <img class="element__img" alt="изображение" src="./images/add_Button.svg">
         <div class="element__group">
           <h3 class="element__text"></h3>
           <button type="button" name="button3" class="element__button"></button>
@@ -80,7 +80,7 @@
         <button type="button" name="button8" class="image__close">
           <img src="./images/close_icon.svg" class='image__close-width' alt="выход">
         </button>
-        <img src='//.jpg' alt="изображение" class='image__opened'>
+        <img src='./images/add_Button.svg' alt="изображение" class='image__opened'>
         <p class="image__text"></p>
       </div>
     </div>
